fix scroll to top visiblitty bug

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -26,6 +26,7 @@ $text-color: #BFDBFD;
     color: $secondary-color;
     background-color: $primary-color;
     padding: 4px;
+    visibility: hidden;
 }
 
 .logo{
